Replace Guava ImmutableList with standard List in VcfFilesTest