@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2020 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -20,7 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.genome;
 
-import com.google.common.collect.ImmutableList;
 import htsjdk.tribble.TribbleException;
 import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.vcf.VCFHeader;
@@ -85,7 +84,7 @@ public class VcfFilesTest {
     public void testReadVcfHeader() {
         Path vcfPath = Paths.get("src/test/resources/altAllele.vcf");
         VCFHeader header = VcfFiles.readVcfHeader(vcfPath);
-        assertThat(header.getGenotypeSamples(), equalTo(ImmutableList.of("sample")));
+        assertThat(header.getGenotypeSamples(), equalTo(List.of("sample")));
     }
 
     @Test
@@ -105,6 +104,6 @@ public class VcfFilesTest {
     public void testReadSampleIdentifiers() {
         Path vcfPath = Paths.get("src/test/resources/altAllele.vcf");
         List<String> samples = VcfFiles.readSampleIdentifiers(vcfPath);
-        assertThat(samples, equalTo(ImmutableList.of("sample")));
+        assertThat(samples, equalTo(List.of("sample")));
     }
 }
